# agent-investment-platform

./: .dockerignore  .env.docker  .env.example  .gitignore  Dockerfile  README.md  TESTING.md  agent-investment-platform.code-workspace  conftest.py  direct-test.py  docker-compose.yml  docker-diagnostic.ps1  docker-manager.py  docker-startup.ps1  install-docker.bat  master-installer-fixed.ps1  master-installer.ps1  orchestrator.py  prerequisites.md  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  scheduler.py  test_mcp_servers.py  user-installer.ps1  validate-system.py  wait-for-docker.ps1
.memory/: architecture-decisions.md  knowledge-graph.json  memory_bank.py  patterns-knowledge.json  project-context.md  user-preferences.json
config/: .gitkeep  alert-config.yaml  data-sources.yaml  elasticsearch-template.json  health-monitoring.yaml  llm-config.yaml  logging-config.yaml  mcp-servers.json  notification-config.yaml  ollama-system-prompt.md  risk_management.yaml  strategies.yaml
dev-tools/: README.md
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  architecture.md  backtesting-framework-summary.md  index.md  mcp-server-integration.md  prd.md  prerequisites.md
examples/: active_trading_test.py  analyze_backtest_behavior.py  backtest_example.py  demo-platform.py  demonstrate_enhanced_backtesting.py  full_backtest_validation.py  integration_demo.py  package.json  validate_backtesting.py  validate_risk_management.py
logs/: .gitkeep  health-check-report.json
reports/: .gitkeep
scripts/: health-check.py  initialize.py  run_tests.py  (+4 more)
(+126 files in other folders)
